modified: updated link to portfolio website

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <li class="navbar-item"><a class="navbar-link" href="#home">Home</a></li>
               <li class="navbar-item"><a class="navbar-link" href="#about">About</a></li>
               <li class="navbar-item"><a class="navbar-link" href="#">Blog</a></li>
-              <li class="navbar-item"><a class="navbar-link" href="#portfolio">Portfolio</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="https://arvinsingh.github.io/portfolio/">Portfolio</a></li>
               <li class="navbar-item"><a class="navbar-link" href="#contact">Contact</a></li>
             </ul>
           </div>
